fixed sidenav alignment

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@
     background-color: #282c34;
     min-height: 100vh;
     align-items: center;
-    align-content: center;
+    align-content: start;
     justify-content: center;
     font-size: calc(5px + 2vmin);
     color: white;
